--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 	</div>
 </section>
 <script src="https://maps.googleapis.com/maps/api/js?key=YOUR%20GOOGLE%20MAP%20API&libraries=geometry"></script>
-<script src="https://kiranpatel04.github.io/Kiran_Portfolio-2/plugins/jQuery/jquery.min.js"></script>
+<script src="https://ashunikam.github.io/plugins/jQuery/jquery.min.js"></script>
 <script src="https://kiranpatel04.github.io/Kiran_Portfolio-2/plugins/bootstrap/bootstrap.min.js"></script>
 <script src="https://kiranpatel04.github.io/Kiran_Portfolio-2/plugins/slick/slick.min.js"></script>
 <script src="https://kiranpatel04.github.io/Kiran_Portfolio-2/plugins/waypoint/jquery.waypoints.min.js"></script>
