--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
           <div class="mb-5">
             <span class="top-title pre-line">Hello, I am Ashwini</span>
             <h3 id="data-analyst--data-visualization-specialist">Java Developer</h3>
-<p>With 3+ years of professional experience, passionate about helping businesses succeed.</p>
-<p>I hold a Master’s degree in science (Electrical and Computer Engineering, University of Illinois at Chicago). I am skilled for most data-analysis steps: data pre-processing, application of statistical methods, data visualization and results communication.</p>
+<p>4 years of experience in the Design, Development, and Testing of Object Oriented, and Web-based Applications using Java/J2EE technologies.</p>
+<p>Ability to develop and design web applications utilizing Core Java, J2EE, JSP, Servlets, Java Beans, EJB, JSF, Spring, Spring boot, Hibernate,Web Services, JDBC, XML, HTML, CSS, DHTML, JavaScript, JSON, Ajax, jQuery. Capable of relational database management systems RDBMS including MySQL, Oracle, and PostgreSQL.</p>
 
           </div>
           <a class="btn btn-primary mr-3 btn-zoom"
-              href="mailto:kiran.p@cvemail.com">Email</a>
+              href="mailto:ashwini.n@tech-emails.com">Email</a>
               <a class="btn btn-primary mr-3 btn-zoom"
-                  href="https://www.linkedin.com/in/kiran-patel-731574215">LinkedIn</a>
+                  href="www.linkedin.com/in/ashwini-nikam-b72421268">LinkedIn</a>
                   <a class="btn btn-primary mr-3 btn-zoom"
-                      href="https://github.com/KiranPatel04">Github</a>
+                      href="https://github.com/ashunikam">Github</a>
         </div>
       </div>
       <div class="col-lg-6">
@@ -404,13 +404,12 @@
                         <h5 id="3-years-of-experience-as-data-analyst-providing-support-in-the-areas-of-project-coordination-data-analysis-and-metrics-reporting">3+ years of experience as data analyst, providing support in the areas of project coordination, data analysis, and metrics reporting.</h5>
 <ul>
 <li>SDLC Methodologies:     Agile, Waterfall</li>
-<li>Programming Language:     Python (NumPy, Pandas, Matplotlib, Seaborn, SciPy, Scikit-Learn), R (Ggplot2, Dplyr), SQL</li>
-<li>Visualization Tools:         Tableau, Power BI</li>
-<li>Database:             MS SQL Server, My SQL</li>
-<li>IDEs:             Jupyter Notebook, PyCharm</li>
-<li>Other Tools:             Git, MS Office, MS Excel (VLOOKUP, Macros, VBA, Pivot tables)</li>
-<li>Statistics &amp; Machine Learning: Linear and Logistic regression, KNN, Decision Trees &amp; Random Forests, SVM, K-Means Clustering</li>
-<li>Certification:            Google Data Analytics Professional Certificate</li>
+<li>Programming Language:     Python, SQL</li>
+<li>Frameworks:         Spring MVC, Spring Boot, JSF, Hibernet, Spring </li>
+<li>Database:             MYSQL, PostgresSQL, Oracle</li>
+<li>IDEs:             NetBeans, IntelliJ</li>
+<li>J2EE Technologies:             Servlet, JSP, JSTL, JDBC</li>
+<li>Web Technologies:            HTML, CSS, JavaScript, JSON, XML</li>
 </ul>
                     </div>
                     
