--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
         
         <li class="nav-item">
-          <a href="https://kiranpatel04.github.io/Kiran_Portfolio-2/#portfolio"
+          <a href="https://ashunikam.github.io/#portfolio"
             class="nav-link text-dark text-sm-center p-2 scroll">Projects</a>
         </li>
         
@@ -191,9 +191,8 @@
                             </svg>
                         </div>
                         <div class="mb-4 text-light">
-                            <p>It’s the analysis of data that really gets me going. I like to explore the relationships between numbers, and translate digits and spreadsheets into stories. In the age of big data, these stories become actionable solutions and strategies for businesses, and I take pride in my ability to make data accessible to both executive decision-makers and frontline sales staff.</p>
-<p>More recently, I graduated from the University of Illinois at Chicago with a Masters degree in Electrical and Computer Engineering.</p>
-<p>In my free time, I enjoy calligraphy and modern handlettering.</p>
+                            <p>Proficient IT professional with a versatile skill set I have completed graduation from ITU (International Technological University), I have 3 years of IT industry experience in test automation.</p>
+<p>I have growth mindset and I always look forward to learn new things. Ready to take new challenges. Ready to learn new things from team members.</p>
 
                         </div>
                         <div>
