--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a class="btn btn-primary mr-3 btn-zoom"
               href="mailto:ashwini.n@tech-emails.com">Email</a>
               <a class="btn btn-primary mr-3 btn-zoom"
-                  href="www.linkedin.com/in/ashwini-nikam-b72421268">LinkedIn</a>
+                  href="https://www.linkedin.com/in/ashwini-nikam-b72421268/">LinkedIn</a>
                   <a class="btn btn-primary mr-3 btn-zoom"
                       href="https://github.com/ashunikam">Github</a>
         </div>
