--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <div class="skill__progress">
                     <div class="skill__progress_heading mb-5">
                         <span class="top-title pre-line">My Skills</span>
-                        <h5 id="3-years-of-experience-as-data-analyst-providing-support-in-the-areas-of-project-coordination-data-analysis-and-metrics-reporting">3+ years of experience as data analyst, providing support in the areas of project coordination, data analysis, and metrics reporting.</h5>
+                        <h5 id="3-years-of-experience-as-data-analyst-providing-support-in-the-areas-of-project-coordination-data-analysis-and-metrics-reporting">4 years of experience as a Java developer, providing support in the areas of project coordination. </h5>
 <ul>
 <li>SDLC Methodologies:     Agile, Waterfall</li>
 <li>Programming Language:     Python, SQL</li>
