--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <img src="images/hero/figure-svg.svg" alt="figure-svg">
                     </div>
                     <div class="skill__thumb_image">
-                        <img src="https://ashunikam.github.io/images/skill/wordcloud-3.png" alt="skill-img" style='
+                        <img src="https://ashunikam.github.io/images/skill/wordcloud-3.jpeg" alt="skill-img" style='
                                         -webkit-mask: url(https://ashunikam.github.io/images/skill/skill-mask-svg.svg);
                                         -webkit-mask-repeat: no-repeat;
                                         -webkit-mask-size: contain;
